--- a/firstGITpush.html
+++ b/firstGITpush.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>GIT demo</h1>
+    <form action="url">
+        <label for="FirstName">First Name</label> <br>
+        <input type="text" id="FirstName" name="FirstName"><br>
+        <label for="LastName">Last Name</label> <br>
+        <input type="text" id="LastName" name="LastName"><br>
+        <input type="submit">
+
+    </form>
 </body>
 </html>
