--- a/formIntro.html
+++ b/formIntro.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <form action="">
-        <label for="">Full name</label>
-        <input type="text">
-        <label for="">email</label>
-        <input type="email">
+        <label for="">Full name</label> <br>
+        <input type="text"> <br>
+        <label for="">email</label> <br>
+        <input type="email"> <br>
+        <input type="submit">
     </form>
 </body>
 </html>
